fix: header spacing and border from table

--- a/style/header/header.css
+++ b/style/header/header.css
@@ -5,6 +5,11 @@ header {
   text-align: center;
   align-items: baseline;
 }
+
+header nav {
+  width: 100%;
+}
+
 .logoHomeMobile {
   display: none;
   opacity: 0;
@@ -45,10 +50,24 @@ header {
 }
 
 .header-links {
-  transform: translateX(-4rem);
   padding: 1.2rem;
   display: flex;
   align-items: center;
+}
+
+.header-links > ul {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+@media screen and (min-width: 1024px) {
+  .header-links .header-contact {
+    position: absolute;
+    right: 40px;
+    top: 30px;
+  }
 }
 
 .header-links a {
@@ -59,7 +78,7 @@ header {
 }
 
 .header-links .s {
-  margin-right: 60rem;
+  /* margin-right: 60rem; */
 }
 
 .header-links .s a:hover {
@@ -151,7 +170,8 @@ header {
   padding: 1.1rem;
   border-radius: 0.8rem;
 }
-.menu-area > ul li:hover {
+.menu-area > ul li:hover,
+.menu-area > ul li:hover a {
   color: #5452f6;
   cursor: pointer;
 }
@@ -227,22 +247,22 @@ header {
   }
 }
 
-@media screen and (max-width: 1300px) {
+/* @media screen and (max-width: 1300px) {
   .header-links .s {
-    margin-right: 40rem;
+    margin-right: 30rem;
   }
 }
 
 @media screen and (max-width: 1100px) {
   .header-links .s {
-    margin-right: 30rem;
+    margin-right: 20rem;
   }
-}
+} */
 
 @media screen and (max-width: 1024px) {
-  .header-links .s {
+  /* .header-links .s {
     margin-right: 30rem;
-  }
+  } */
 
   .dropdown {
     position: relative;
